-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8283500 | 11.0.16 | Jie Fu | P2 | Resolved | Fixed | b01 |
When I configure using --with-jvm-features=-compiler1, I found build is broken. The main cause is that some shenandoah related part did not consider the situation when compiler1 is disabled.
- backported by
-
JDK-8283500 Shenandoah build fails with --with-jvm-features=-compiler1
-
- Resolved
-
- duplicates
-
JDK-8283409 JDK11 fails to build when C1 is disabled
-
- Closed
-