8222926: Shenandoah build fails with --with-jvm-features=-compiler1

Reviewed-by: shade, rkennke